# lite-browser

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
