[package]
name = "lite-browser"
version = "0.1.0"
description = "A lightweight, low-RAM desktop web browser"
authors = ["you"]
edition = "2021"

[lib]
name = "lite_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"
tauri-plugin-shell = "2.3.4"
tokio = { version = "1.49.0", features = ["time"] }

# Performance optimizations for release builds
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary
strip = true          # Strip debug symbols

[profile.dev]
opt-level = 0
debug = true
